# texture0

./: .gitignore  CMakeLists.txt  Info.plist  Makefile  README.md  main.cpp  tire.psd
texture0.xcode/: project.pbxproj  tokoi.mode1  tokoi.pbxuser
texture0.xcodeproj/: project.pbxproj
